adding .travis.yml and deploy.sh files

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
   - "8"
-  - "9"
 services: mongodb  
 cache:  
   directories:
@@ -10,5 +9,10 @@ sudo: false
 install:
   - npm install
 script:
-  - npm run lint
   - npm test
+  deploy:
+    - provider: script
+    skip_cleanup: true
+    script: chmod +x ./deploy.sh && ./deploy.sh
+    on:
+      branch: master
